--- a/action.yml
+++ b/action.yml
@@ -11,6 +11,7 @@ outputs:
 runs:
   using: "composite"
   steps:
+    - run: exit 1
     - run: echo Hello ${{ inputs.who-to-greet2 }}.
       shell: bash
     - id: random-number-generator
