--- a/action.yml
+++ b/action.yml
@@ -19,3 +19,4 @@ runs:
       shell: bash
     - run: ${{ github.action_path }}/goodbye.sh
       shell: bash
+    - uses: ./goodbye.yml@{{ github.ref }}
