--- a/.github/workflows/actions-test.yml
+++ b/.github/workflows/actions-test.yml
@@ -19,4 +19,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - id: composite
-        uses: ./actions.yml@{{ github.ref }}
+        uses: ./action.yml@{{ github.ref }}
