Update and rename actions-test.yml to composite-action-test.yml

--- a/.github/workflows/composite-action-test.yml
+++ b/.github/workflows/composite-action-test.yml
@@ -19,4 +19,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - id: composite
-        uses: ./action.yml@{{ github.ref }}
+        uses: ./action.yml@main
