--- a/.github/workflows/composite-action-test.yml
+++ b/.github/workflows/composite-action-test.yml
@@ -14,9 +14,10 @@ jobs:
     steps:
       - name: Run a multi-line script
         run: |
-          echo ref: {{ github.ref }}
+          echo ref: ${{ github.ref }}
   composite-action: 
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@main
       - id: composite
         uses: ./action.yml@main
