--- a/.github/workflows/composite-action-test.yml
+++ b/.github/workflows/composite-action-test.yml
@@ -20,4 +20,4 @@ jobs:
     steps:
       - uses: actions/checkout@main
       - id: composite
-        uses: ./action.yml@main
+        uses: ./@main
