--- a/.github/workflows/composite-action-test.yml
+++ b/.github/workflows/composite-action-test.yml
@@ -18,6 +18,6 @@ jobs:
   composite-action: 
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@main
+      - uses: actions/checkout@${{ github.ref }}
       - id: composite
         uses: ./
