--- a/action.yml
+++ b/action.yml
@@ -17,6 +17,6 @@ runs:
 #     - id: random-number-generator
 #       run: echo "::set-output name=random-id::$(echo $RANDOM)"
 #       shell: bash
-#     - run: ${{ github.action_path }}/goodbye.sh
-#       shell: bash
-    - uses: ./action2.yml
+    - run: ${{ github.action_path }}/goodbye.sh
+      shell: bash
+#     - uses: ./action2.yml
